--- a/src/app/components/stepOne/FindPatient.module.css
+++ b/src/app/components/stepOne/FindPatient.module.css
@@ -32,7 +32,7 @@
     transition: 0.5s;
     cursor: pointer;
     border-radius: 5px;
-    border: 1px solid #1d355e;
+    border: 1px solid #063b5e;
     background-color: var(--light-blue);
     color: white;
     -webkit-appearance: none;
@@ -40,7 +40,7 @@
 }
 
 .form button:hover {
-    background-color: #1d355e;
+    background-color: #063b5e;
     color: white;
 }
 
